# jbig2codec

./: CMakeLists.txt  LICENSE  main.cpp
core/fxcodec/codec/: ccodec_faxmodule.cpp  ccodec_jbig2module.cpp  ccodec_jbig2module.h
core/fxcodec/jbig2/: JBig2_BitStream.cpp  JBig2_BitStream.h  JBig2_Context.cpp  JBig2_Context.h  JBig2_HtrdProc.cpp  JBig2_HuffmanTable.cpp  JBig2_Image.cpp
core/fxcrt/: cfx_binarybuf.cpp  fx_coordinates.h  fx_memory.cpp  string_view_template.h
